# particle_system

./: Cargo.toml  wasm.html
src/: camera.rs  egui.rs  gpu.rs  lib.rs  main.rs  quad.rs  system.rs  texture.rs  uniform.rs  window.rs  window_proxy.rs
src/attr/: mod.rs  position.rs  velocity.rs
src/postproc/: bloom.rs  mod.rs
src/profiler/: mod.rs
src/props/: mod.rs  position.rs  velocity.rs
src/shaders/: bloom_blend.wgsl  blur.wgsl  fullscreen_quad_vertex.wgsl  load_data_from_image.wgsl  shader.wgsl  vfx_compute.wgsl  vfx_render.wgsl
