[package]
name = "particle_system"
version = "0.1.0"
edition = "2021"

[features]
default = ["instant/wasm-bindgen"]

[dependencies]
bytemuck = {version = "1.19.0", features = ["derive"]}
cgmath = "0.18.0"
pollster = "0.4.0"
rand = "0.8.5"
wgpu = {version = "23.0.0"}
winit = "0.30.5"
cfg-if = "1"
instant = "0.1"
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'